# hrobots

./: .gitignore  AUTHORS  README.md  README.org  default.nix  generate-nix-project.sh  hrobots.cabal  netrobots.proto  shell.nix  stack.yaml
doc/: FRPIntro.html  Regole_del_gioco.html  Regole_del_gioco.md  makedoc.sh
src/: Main.hs
src/Game/: Netrobots.hs
src/Game/Netrobots/: Connection.hs  Game.hs  Proto.hs
src/Game/Netrobots/Classic/: Robot.hs
src/Game/Netrobots/Examples/: FRPIntro.lhs  TestRobotClassic.hs
src/Game/Netrobots/FRP/: Model.hs  Robot.hs
src/Game/Netrobots/Proto/: Cannon.hs  CreateRobot.hs  DeleteRobot.hs  Drive.hs  MainCommand.hs  RobotCommand.hs  RobotStatus.hs  Scan.hs  ScanStatus.hs
src/Game/Netrobots/Tutorial/: FRPIntro.lhs
